Upgrade Swagger to latest version