@@ -19,18 +19,19 @@ package com.castlemock.web.basis.config;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
-import springfox.documentation.builders.ParameterBuilder;
 import springfox.documentation.builders.PathSelectors;
 import springfox.documentation.builders.RequestHandlerSelectors;
-import springfox.documentation.schema.ModelRef;
+import springfox.documentation.builders.RequestParameterBuilder;
 import springfox.documentation.service.ApiInfo;
 import springfox.documentation.service.Contact;
-import springfox.documentation.service.Parameter;
+import springfox.documentation.service.ParameterType;
+import springfox.documentation.service.RequestParameter;
 import springfox.documentation.spi.DocumentationType;
 import springfox.documentation.spring.web.plugins.Docket;
 import springfox.documentation.swagger2.annotations.EnableSwagger2;
 
 import java.util.Collections;
+import java.util.List;
 
 /**
  * The {@link SwaggerConfig} is responsible for configure Swagger.
@@ -46,11 +47,11 @@ public class SwaggerConfig {
 
     @Bean
     public Docket api() {
-        Parameter  authorizationParameter =
-                new ParameterBuilder().name("Authorization")
-                .modelRef(new ModelRef("string"))
-                        .parameterType("header")
-                        .required(false).build();
+        final RequestParameter authorizationParameter = new RequestParameterBuilder()
+                .name("Authorization")
+                .in(ParameterType.HEADER)
+                .required(false)
+                .build();
 
         return new Docket(DocumentationType.SWAGGER_2)
                 .select()
@@ -58,7 +59,7 @@ public class SwaggerConfig {
                 .paths(PathSelectors.ant("/api/rest/**"))
                 .build()
                 .apiInfo(apiInfo())
-                .globalOperationParameters(Collections.singletonList(authorizationParameter));
+                .globalRequestParameters(List.of(authorizationParameter));
     }
 
     private ApiInfo apiInfo() {
